--- a/index1.html
+++ b/index1.html
@@ -29,17 +29,17 @@ body{
 	<div>
 		<h3>В этой книге ты найдешь</h3>
 		<ul type="square">
-			<li><a href="вступление.html" class="ssulka" target="_blank">ВСТУПЛЕНИЕ</a></li>
+			<li><a href="index2.html" class="ssulka" target="_blank">ВСТУПЛЕНИЕ</a></li>
 			<li>ОТДЕЛ ПЕРВЫЙ >> Воззрения на нечистую силу и сказания о ней в средние века
 				<ol type="1">
-					<li><a href="Мнения о существовании нечистой силы.html" class="ssulka" target="_blank">МНЕНИЯ О СУЩЕСТВОВАНИИ НЕЧИСТОЙ СИЛЫ</a></li>
-					<li><a href="Явления дьявола людям.html" class="ssulka" target="_blank">ЯВЛЕНИЯ ДЬЯВОЛА ЛЮДЯМ</a></li>
-					<li><a href="Похищение людей нечистой силой.html" class="ssulka" target="_blank">ПОХИЩЕНИЕ ЛЮДЕЙ НЕЧИСТОЙ СИЛОЙ</a></li>
-					<li><a href="Превращения дьявола.html" class="ssulka" target="_blank">ПРЕВРАЩЕНИЯ ДЬЯВОЛА</a></li>
-					<li><a href="Признаки одержимости дьяволом.html" class="ssulka" target="_blank">ПРИЗНАКИ ОДЕРЖИМОСТИ ДЬЯВОЛОМ</a></li>
-					<li><a href="Шабаш.html" class="ssulka" target="_blank">ШАБАШ</a></li>
-					<li><a href="Продажа души дьяволу и договор с ним.html" class="ssulka" target="_blank">ПРОДАЖА ДУШИ ДЬЯВОЛУ И ДОГОВОР С НИМ</a></li>
-					<li><a href="Злобный проделки дьявола.html" class="ssulka" target="_blank">ЗЛОБНЫЕ ПРОДЕЛКИ ДЬЯВОЛА</a></li>
+					<li><a href="index3.html" class="ssulka" target="_blank">МНЕНИЯ О СУЩЕСТВОВАНИИ НЕЧИСТОЙ СИЛЫ</a></li>
+					<li><a href="index4.html" class="ssulka" target="_blank">ЯВЛЕНИЯ ДЬЯВОЛА ЛЮДЯМ</a></li>
+					<li><a href="index5.html" class="ssulka" target="_blank">ПОХИЩЕНИЕ ЛЮДЕЙ НЕЧИСТОЙ СИЛОЙ</a></li>
+					<li><a href="index6.html" class="ssulka" target="_blank">ПРЕВРАЩЕНИЯ ДЬЯВОЛА</a></li>
+					<li><a href="index7.html" class="ssulka" target="_blank">ПРИЗНАКИ ОДЕРЖИМОСТИ ДЬЯВОЛОМ</a></li>
+					<li><a href="index8.html" class="ssulka" target="_blank">ШАБАШ</a></li>
+					<li><a href="index9.html" class="ssulka" target="_blank">ПРОДАЖА ДУШИ ДЬЯВОЛУ И ДОГОВОР С НИМ</a></li>
+					<li><a href="index.html" class="ssulka" target="_blank">ЗЛОБНЫЕ ПРОДЕЛКИ ДЬЯВОЛА</a></li>
 				</ol>
 			</li>
 			<li>ОТДЕЛ ВТОРОЙ >> Духи народных сказаний
