--- a/index10.html
+++ b/index10.html
@@ -24,7 +24,7 @@
 </style>
 <body>
 	<div>
-		<a href="Продажа души дьяволу и договор с ним.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index9.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
