--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
 		<p>И вот народ, все еще пропитанный духом своего древнего язычества, никак не мог или не хотел понять и принять это новое воззрение на духа мрака и зла: для него он все еще был бог, и он служил ему, угождал ему, в чаянии благодати. Вот в чем состояла вся суть того конфликта между народными воззрениями и христианством, носители и хранители которого и вели с этими старыми языческими воззрениями ожесточенную борьбу чуть не тысячу лет подряд.</p>
 	</div>
 	<footer style="text-align: right;">
-		<a href="МНЕНИЯ О СУЩЕСТВОВАНИИ НЕЧИСТОЙ СИЛЫ.html" class="ssulka"><h3><em>Следующая</em></h3> </a>
+		<a href="index3.html" class="ssulka"><h3><em>Следующая</em></h3> </a>
 	</footer>
 </body>
 </html>
