--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
 </style>
 <body id="body">
 	<div>
-		<a href="Вступление.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index2.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header id="header">
 		<h1>Орлов М. История сношений человека с дьяволом</h1> 
@@ -45,7 +45,7 @@
 		<p>Совсем в ином духе повествует автор XVI столетия Лафатер, написавший книгу о привидениях, чудесах, явлениях духов и т.д., изданную в 1571 году. Он настроен скептически по отношению ко всякого рода сверхъестественным явлениям. Он в своей книге описывает множество разных чудес, но все они у него объясняются либо какими-нибудь естественными причинами, или злонамеренным шарлатанством. Вот, например, одна из передаваемых им историй. Люди, достойные веры, сообщали ему, что в 1569 году в городе Аугсбурге в одном доме служанка и несколько служителей отозвались весьма непочтительно об иезуитах. Узнав об этом, один иезуит пришел к их хозяину и сказал ему, что он заставит их в скором времени думать иначе. И вот он переоделся дьяволом и спрятался в доме. Служанка как раз пошла за чем-то, наткнулась на этого дьявола и, разумеется, от страха не взвидела света. Убежав от черта, она рассказала потом о нем другим служителям. Среди них нашелся какой-то храбрец. Он пошел в то место, где сидел дьявол, и когда тот на него кинулся, храбрый служитель выхватил кинжал и проткнул им дьявола насквозь. Тот тут же растянулся замертво. Эта история, прибавляет Лафатер, была потом изложена в немецких стихах и напечатана.</p>
 	</div>
 	<footer>
-		<a href="Явления дьявола людям.html" class="ssulka"><h3 style="
+		<a href="index4.html" class="ssulka"><h3 style="
 		text-align: right;"><em>Следющая</em></h3></a>
 	</footer>
 </body>
