--- a/index4.html
+++ b/index4.html
@@ -24,7 +24,7 @@
 </style>
 <body>
 	<div>
-		<a href="Мнения о существовании нечистой силы.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index3.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -50,7 +50,7 @@
 		</p>
 	</div>
 	<footer>
-		<a href="Похищение людей нечистой силой.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index5.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
