--- a/index5.html
+++ b/index5.html
@@ -24,7 +24,7 @@
 </style>
 <body id="body">
 	<div>
-		<a href="Явления дьявола людям.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index4.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header id="header">
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -47,7 +47,7 @@
 
 	</div>
 	<footer>
-		<a href="Превращения дьявола.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index6.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
