--- a/index6.html
+++ b/index6.html
@@ -24,7 +24,7 @@
 </style>
 <body>
 	<div>
-		<a href="Похищение людей нечистой силой.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index5.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -48,7 +48,7 @@
 		И с этими словами злой дух исчез и больше уже не возвращался.</p>
 	</div>
 	<footer>
-		<a href="Признаки одержимости дьяволом.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index7.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
