--- a/index7.html
+++ b/index7.html
@@ -23,7 +23,7 @@
 </style>
 <body>
 	<div>
-		<a href="Превращения дьявола.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index6.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -74,7 +74,7 @@
 
 	</div>
 	<footer>
-		<a href="Шабаш.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index8.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
