--- a/index8.html
+++ b/index8.html
@@ -24,7 +24,7 @@
 </style>
 <body>
 	<div>
-		<a href="Признаки одержимости дьяволом.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index7.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -94,7 +94,7 @@
 
 	</div>
 	<footer>
-		<a href="Продажа души дьяволу и договор с ним.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index9.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
