--- a/index9.html
+++ b/index9.html
@@ -24,7 +24,7 @@
 </style>
 <body>
 	<div>
-		<a href="Шабаш.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
+		<a href="index8.html" class="ssulka"><h3><em>Предыдущая</em></h3></a>
 	</div>
 	<header>
 		<h1>Орлов М. История сношений человека с дьяволом</h1>
@@ -47,7 +47,7 @@
 		<p>Иногда печатями дьявола считали те места на теле колдуна или ведьмы, или вообще человека одержимого, на которые нечистый дух возлагал свой перст; иногда судьи, специалисты по этой части, считали такими печатями разные непостижимого свойства предметы, полученные одержимым от нечистого. Так, в 1591 году схватили и судили старую нищенку, 80-тилетнюю старуху, Леонарду Шастено. Это была ведьма, в чем ее и изобличили самым неопровержимым образом. Достаточно сказать, что свидетели-очевидцы видели ее на шабашах, а перед такими свидетельствами в доброе старое время никакие запирательства, божбы и клятвы силы не имели. Да старуха в конце концов и сама чистосердечно покаялась. Она, между промчим, предъявила судьям какие-то два кусочка будто бы воска, как она уверяла. Судьи рассмотрели этот воск и не могли в нем признать ни одного из ведомых людям веществ. Это было и неудивительно, если принять в расчет путь приобретения старухой этих кусочков. Дело в том, что когда она сидела в тюрьме, дьявол явился к ней в виде кошки. Измаянная допросами старуха сказала ему, что жизнь стала ей не в мочь и что она хотела бы умереть. Тогда дьявол и дал ей эти два кусочка, советуя ей их съесть. Съешь, дескать, и умрешь. Но старуха почему-то раздумала прибегать к такому способу самоубийства и представила эти таинственные кусочки своим судьям. Она, бедная, быть может, рассчитывала на снисхождение. Но такой расчет в те времена был в высшей степени неоснователен.</p>
 	</div>
 	<footer>
-		<a href="Злобный проделки дьявола.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
+		<a href="index10.html" class="ssulka"><h3 style="text-align: right;"><em>Следуующая</em></h3></a>
 	</footer>
 </body>
 </html>
